--- a/AoM-DLL-Main/CMakeLists.txt
+++ b/AoM-DLL-Main/CMakeLists.txt
@@ -4,9 +4,9 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.2 FATAL_ERROR)
 
 ##
-## The name of the project is "CFuriusAO"
+## The name of the project is "Proxy_Main"
 ##
-PROJECT(CFuriusAO)
+PROJECT(Proxy_Main)
 
 ##
 ## Enable TINY_MODE (COMPILER)
@@ -19,21 +19,22 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /D_DEBUG_")
 ## Enable TINY_MODE (LINKER)
 ##
 SET(CMAKE_SHARED_LINKER_FLAGS "/MANIFEST:NO /DYNAMICBASE:NO /OPT:REF /SAFESEH:NO /NOLOGO /NODEFAULTLIB") 
-SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /SECTION:.text,ERW /MERGE:.data=.rdata /MERGE:.rdata=.text /MAP:Memory.lst /ignore:4254")
+SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /SECTION:.text,ERW /MERGE:.data=.rdata /MERGE:.rdata=.text /ignore:4254")
 SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /DLL")
 
 ##
 ## Add the project includes
 ##
-INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/../Client/include")
+INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/../AoM-Client/include")
 
 ##
 ## Add the project files
 ##
 FILE(GLOB_RECURSE SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
-FILE(GLOB_RECURSE SOURCES_X "${CMAKE_CURRENT_SOURCE_DIR}/../Client/src/*.cpp")
+FILE(GLOB_RECURSE SOURCES_X "${CMAKE_CURRENT_SOURCE_DIR}/../AoM-Client/src/*.cpp")
+
 
 ##
 ## Make the executable
 ##
-ADD_LIBRARY(CFuriusAO SHARED ${SOURCES} ${SOURCES_X})
+ADD_LIBRARY(Proxy_Main SHARED ${SOURCES} ${SOURCES_X})
