Minor compiling issue

--- a/AoM-DLL-Main/CMakeLists.txt
+++ b/AoM-DLL-Main/CMakeLists.txt
@@ -13,7 +13,7 @@ PROJECT(Proxy_Main)
 ##
 SET(CMAKE_BUILD_TYPE "MINSIZEREL")
 SET(CMAKE_CXX_FLAGS "/Oy /Zl /EHs-c- /Os /GS- /Gy /Gd /Gm- /nologo /W3")
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /D_DEBUG_") 
+##SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /D_DEBUG_") 
 
 ##
 ## Enable TINY_MODE (LINKER)
